--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,12 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <title>Banking App</title>
+    
+    
+    <!-- Add this link in your HTML file -->
+<link rel="stylesheet" href="https://js.stripe.com/v3/">
+
+    <title>Nidhi Bank</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
